# ITMO_ICT_WebDevelopment_2024-2025

./: 404.html  index.html
django_orm/: index.html
lab1/: index.html
lab2/: index.html
lab3/: index.html
search/: search_index.json
students/k3339/Kotovshchikov_Andrey/docs/: mkdocs.yml
students/k3339/Kotovshchikov_Andrey/docs/site/: index.html
students/k3339/laboratory_works/Kotovshchikov_Andrey/docs/: mkdocs.yml
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/: .gitignore  Makefile  andrey.py  andrey.sql  docker-compose.yml  pyproject.toml
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/src/auth_app/: admin.py  models.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/src/auth_app/migrations/: 0001_initial.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/src/hotel_app/: admin.py  filters.py  models.py  pagination.py  queries.py  serializers.py  urls.py  views.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/src/hotel_app/migrations/: 0001_initial.py  0002_alter_booking_guest.py  0003_alter_booking_room.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_3/src/hotel_project/: exceptions.py  settings.py  urls.py
students/k3339/laboratory_works/Kotovshchikov_Andrey/laboratory_work_4/: package-lock.json  package.json  tsconfig.json
students/k3339/practical_works/Kotovshchikov_Andrey/simple_drf_project/: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
(+59 files in other folders)
