[tool.poetry]
name = "laboratory-work-3"
version = "0.1.0"
description = ""
authors = ["N"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djoser = "^2.3.1"
drf-yasg = "^1.21.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
